Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4039

Failure on test suite replay-single test_90: wrong stripe: f0, uuid: lustre-OST0000_UUID

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.9.0
    • Lustre 2.5.0, Lustre 2.9.0
    • server and client: lustre-master build # 1687
    • 3
    • 10848

      This issue was created by maloo for sarah <sarah@whamcloud.com>

      This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/f9c487da-26c9-11e3-83d1-52540035b04c.

      The sub-test test_90 failed with the following error:

      Create the files
      /mnt/lustre/d0.replay-single/d90/f0
      lmm_stripe_count: 1
      lmm_stripe_size: 1048576
      lmm_pattern: 1
      lmm_layout_gen: 0
      lmm_stripe_offset: 1
      obdidx objid objid group
      1 30476 0x770c 0

      replay-single test_90: @@@@@@ FAIL: wrong stripe: f0, uuid: lustre-OST0000_UUID

      Info required for matching: replay-single 90

            ys Yang Sheng
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: