LU-4039 tests: debug patch

print import state.

Test-Parameters: fortestonly mdtfilesystemtype=zfs mdsfilesystemtype=zfs ostfilesystemtype=zfs testlist=replay-single,replay-single,replay-single,replay-single
Signed-off-by: Yang Sheng <yang.sheng@intel.com>
Change-Id: Ifc4f1d8ba406ccc6d929181555dc5b734e5b4d71